icppp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icppp
spec:
  type: NodePort
  ports:
    - name: http-web
      port: 9315
      targetPort: 9315
