icppp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: icppp
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  rules:
    - host: icppp.app.n3ko.co
      http:
        paths:
          - backend:
              service:
                name: icppp
                port:
                  number: 9315
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - icppp.app.n3ko.co
      secretName: icppp-cert
